...
    TabView {
      NavigationView {
        ZStack {
          GroupList()
          error
          busy
        }.navigationBarTitle("Groups")
      }.navigationViewStyle(StackNavigationViewStyle()).tabItem {
        Image("fas.users").renderingMode(.template)
        Text("Groups")
      }.tag(0)
      NavigationView {
        ZStack {
          EventList(groupId: nil)
          error
          busy
        }.navigationBarTitle("Events")
      }.navigationViewStyle(StackNavigationViewStyle()).tabItem {
        Image("far.calendar-alt").renderingMode(.template)
        Text("Events")
      }.tag(1)
      NavigationView {
        ZStack {
...
