//
//  LansingCodesUITestsScreenShots.swift
//  LansingCodesUITestsScreenShots
//
//  Created by Leo Dion on 12/12/19.
//  Copyright © 2019 BrightDigit. All rights reserved.
//

import XCTest

class LansingCodesUITestsScreenShots: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
      setupSnapshot(app)
        app.launch()

        // Use recording to get started writing UI tests.
      
      let tabBarsQuery = app.tabBars
      tabBarsQuery.buttons["Groups"].tap()
      snapshot("@All-Groups")
      
      let tablesQuery = app.tables
      tablesQuery/*@START_MENU_TOKEN@*/.buttons["Demo Night"]/*[[".cells.buttons[\"Demo Night\"]",".buttons[\"Demo Night\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
      snapshot("@Single-Group")
      tabBarsQuery.buttons["Events"].tap()
      snapshot("@Events")
      
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
